Closed Bug 1606601 Opened 4 years ago Closed 4 years ago

[Linux/HiDPI] Set scale factor to GtkStyle when WidgetStyleCache is not used

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

We need to set scale factor to GtkStyle when WidgetStyleCache is not used, i.e. gtk_widget_get_style_context() is used to get style directly from widget.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5eb6ca5cd17a
[Linux/HiDPI] Set scale factor to GtkStyleContext when WidgetStyleCache is not used, r=jhorak
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Regressions: 1611628
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: