Bug 1606601 - [Linux/HiDPI] Set scale factor to GtkStyleContext when WidgetStyleCache is not used, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D58507